# public/swagger.json
@@ -22,34 +22,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"UserRequest": {
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"lastName": {
-						"type": "string"
-					},
-					"nickName": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"name",
-					"lastName",
-					"nickName",
-					"email",
-					"password"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"Message": {
 				"properties": {
 					"from": {
@@ -129,9 +101,7 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/UserRequest"
-								}
+								"schema": {}
 							}
 						}
 					}
